<resources>
    <string name="app_name">School</string>

    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="action_settings">Настройки</string>
    <string name="action_next">Далее</string>
    <string name="title_activity_login">Вход</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Логин</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Номер</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_repeat_password">Повторите пароль</string>
    <string name="prompt_lastname">Фамилия</string>
    <string name="prompt_firstname">Имя</string>
    <string name="prompt_patronymic">Отчество</string>
    <string name="prompt_birthday">Дата рождения</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_invalid_login">Некорректный логин</string>
    <string name="error_invalid_password">Слишком короткий пароль</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_passwords_is_different">Пароль отличается</string>
    <string name="error_field_required">Это поле обазятельно к заполнению</string>
    <string name="error_login_existed">Пользователь с таким логином уже существует</string>
    <string name="error_invalid_date_of_birthday">Недопустимая дата рождения</string>
    <string name="error_invalid_lastname">Некорректная фамилия</string>
    <string name="error_invalid_firstname">Некорректное имя</string>
    <string name="error_invalid_patronymic">Некорректное отчество</string>
    <string name="gender">Пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="action_submit">Готово</string>
    <string name="error_invalid_phone">Некорректный номер</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_drawer">AdminDrawerActivity</string>
    <string name="title_activity_teacher_drawer">TeacherDrawerActivity</string>
    <string name="error_user_without_role">Вход невозможен (пользователю не присвоена роль)</string>
    <string name="error_login_failed">Неверный логин или пароль</string>
    <string name="msg_cancelled_image_capture">Фото не выбрано</string>
    <string name="error_image_capture_failed">Ошибка при выборе картинки</string>
    <string name="error_image_path_missing">Путь к картинке отсутствует</string>
    <string name="btnUploadToServer">Загрузить</string>
</resources>
