<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_lastname"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_firstname"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_patronymic"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_birthday"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gender"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"/>
    </RadioGroup>

</LinearLayout>